--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,22 +15,27 @@
   </style>
 </head>
 <body>
+<div class="container">
+    <div class="text">
+      <h2>Learn to code <br> by watching others</h2>
+      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. </p>
+    </div>
+    <div class="formarea">
+      <button class="btn" id="btn"> <span>Try it free 7 days</span> then $20/mo. thereafter</button>
+      <form action="">
+        <input placeholder="First Name" type="text" name="firstname" id="firtname">
+        <input placeholder="Last Name" type="text" name="lastname" id="lastname">
+        <input placeholder="Email" type="text" name="email" id="email">
+        <input placeholder="Password" type="password" name="password" id="password">
+        <input type="submit" value="Claim your free trial">
+        <p>By clicking the button, you are agreeing to our <span> Terms and Services</span></p>
+      </form>
+    </div>
+</div>
 
-  Learn to code by watching others
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+  
   
   <footer>
     <p class="attribution">
@@ -38,5 +43,6 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
