--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
     <div class="formarea">
       <button class="btn" id="btn"> <span>Try it free 7 days</span> then $20/mo. thereafter</button>
       <form action="">
-        <input placeholder="First Name" type="text" name="firstname" id="firtname">
+        <div class="inpt">
+        <input class="" placeholder="First Name" type="text" name="firstname" id="firtname">
+        <span id="error-msg">First Name cannot be empty</span>
+      </div>
+      <div class="inpt">
         <input placeholder="Last Name" type="text" name="lastname" id="lastname">
+        <span id="error-msg">Last Name cannot be empty</span>
+      </div>
+      <div class="inpt">
         <input placeholder="Email" type="text" name="email" id="email">
+        <span id="error-msg">This doesnt look like an email</span>
+      </div>
+      <div class="inpt">
         <input placeholder="Password" type="password" name="password" id="password">
-        <input type="submit" value="Claim your free trial">
+        <span id="error-msg">Password cannot be empty</span>
+      </div>
+        <input type="submit" id="submot" value="Claim your free trial">
         <p>By clicking the button, you are agreeing to our <span> Terms and Services</span></p>
       </form>
     </div>
