mobile version finished

--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
       <form action="">
         <div class="inpt">
         <input class="" placeholder="First Name" type="text" name="firstname" id="firtname">
-        <span id="error-msg">First Name cannot be empty</span>
+        <img id="error-img" src="images/icon-error.svg" alt="">
+        <span id="error-msg"></span>
       </div>
       <div class="inpt">
         <input placeholder="Last Name" type="text" name="lastname" id="lastname">
-        <span id="error-msg">Last Name cannot be empty</span>
+        <img id="error-img" src="images/icon-error.svg" alt="">
+        <span id="error-msg"></span>
       </div>
       <div class="inpt">
         <input placeholder="Email" type="text" name="email" id="email">
-        <span id="error-msg">This doesnt look like an email</span>
+        <img id="error-img" src="images/icon-error.svg" alt="">
+        <span id="error-msg"></span>
       </div>
       <div class="inpt">
         <input placeholder="Password" type="password" name="password" id="password">
-        <span id="error-msg">Password cannot be empty</span>
+        <img id="error-img" src="images/icon-error.svg" alt="">
+        <span id="error-msg"></span>
       </div>
         <input type="submit" id="submot" value="Claim your free trial">
         <p>By clicking the button, you are agreeing to our <span> Terms and Services</span></p>
@@ -47,14 +51,6 @@
 </div>
 
 
-  
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
   <script src="script.js"></script>
 </body>
 </html>
